--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 		<p>You are currently <strong>online</strong></p>
 	</header>
 	<nav>
-		<ul>
+		<ul id='navUl'>
 			<li><a href="#login">Log In</a></li>
 			<li><a href="#logout">Log out</a></li>
 			<li><a href="#register">Register</a></li>
-			<li><a href="#home">Foo</a></li>
+			<li><a href="#home">Home</a></li>
 		</ul>
 	</nav>
 	<aside class="hidden">
